# pytorch-ie-hydra-template-1

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .project-root  README.md  evaluate.py  predict.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_symlinks.sh  test.py  train.py
.github/actions/init-env/: action.yml
.github/workflows/: code_quality_and_tests.yml  markdown-autodocs.yml  pre-commit.yml  tests.yml
configs/: evaluate.yaml  evaluate_documents.yaml  predict.yaml  test.yaml  train.yaml
configs/bridge/: transformer_token_classification.yaml
configs/callbacks/: default.yaml
configs/datamodule/: conll2003.yaml  default.yaml
configs/dataset/: _add_candidate_relations.yaml  _add_partitions.yaml  _add_reversed_relations.yaml  _add_sentences.yaml  _collect_statistics.yaml  _collect_token_statistics.yaml  _convert_documents.yaml  _create_test_split.yaml  _create_test_split_by_ids.yaml  _create_validation_split.yaml  _remove_overlapping_entities.yaml  _rename_splits.yaml  _select_n.yaml  conll2003.yaml  conll2003_base.yaml  conll2003_collect_statistics.yaml  conll2003_select_n.yaml  drugprot_base.yaml  drugprot_prepared.yaml  from_serialized_documents.yaml  imdb.yaml  sciarg_base.yaml  sciarg_prepared.yaml
configs/debug/: default.yaml  overfit.yaml
configs/documents/: conll2003.yaml
configs/experiment/: conll2003.yaml  drugprot.yaml  imdb.yaml  sciarg_adur.yaml  sciarg_are.yaml
configs/hparams_search/: conll2003_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: aim.yaml  comet.yaml  csv.yaml  mlflow.yaml  wandb.yaml
configs/metric/: count_entity_labels.yaml  count_relation_argument_distances.yaml  count_relation_argument_token_distances.yaml  count_text_characters.yaml  count_text_tokens.yaml  f1.yaml  relation_argument_character_distances.yaml  relation_argument_token_distances.yaml  span_coverage_characters.yaml  span_coverage_tokens.yaml  span_lengths_characters.yaml  span_lengths_characters_per_label.yaml  span_lengths_tokens.yaml
configs/model/: from_pretrained.yaml  sequence_classification_with_pooler.yaml  token_classification_with_seq2seq_encoder_and_crf.yaml  transformer_text_classification.yaml  transformer_token_classification.yaml
configs/model/seq2seq_encoder/: lstm.yaml  many_encoders.yaml
configs/paths/: default.yaml
configs/pipeline/: _from_pretrained.yaml  from_pretrained.yaml  from_pretrained_after_training.yaml  ner_re_pipeline.yaml
configs/serializer/: brat.yaml  json.yaml
configs/taskmodule/: from_pretrained.yaml  labeled_span_extraction_by_token_classification.yaml  re_text_classification_with_indices.yaml  simple_transformer_text_classification.yaml  transformer_re_text_classification.yaml  transformer_token_classification.yaml
configs/trainer/: default.yaml
dataset_builders/pie/conll2003/: README.md  conll2003.py  requirements.txt
dataset_builders/pie/drugprot/: README.md  drugprot.py  requirements.txt
datasets/imdb/: imdb.py
scripts/: schedule.sh
src/: evaluate.py  evaluate_documents.py  evaluate_prediction.py  evaluation_pipeline.py  predict.py  prediction_pipeline.py  testing_pipeline.py  train.py  training_pipeline.py
src/analysis/: combine_job_returns.py  common.py
src/bridge/: transformer_token_classification.py
src/datamodules/: __init__.py  datamodule.py
src/document/: conversion.py  statistics.py  types.py
src/hydra_callbacks/: __init__.py  save_job_return_value.py
src/metrics/: __init__.py  f1.py  interface.py  statistics.py
src/models/: __init__.py  transformer_token_classification.py
src/pipeline/: __init__.py  ner_re_pipeline.py
src/serializer/: __init__.py  brat.py  interface.py  json.py
src/taskmodules/: __init__.py  simple_transformer_text_classification.py  transformer_token_classification.py
src/types/: annotation.py  document.py
src/utils/: __init__.py  config.py  config_utils.py  dataset.py  document.py  inference_utils.py  loggers.py  logging_utils.py  metrics.py  rich_utils.py  span.py  span_utils.py  statistic_utils.py  statistics.py  task_utils.py  utils.py
tests/: __init__.py  conftest.py  test_configs.py  test_eval.py  test_experiments.py  test_predict.py  test_sweeps.py  test_train.py
tests/dataset_builders/: __init__.py
tests/dataset_builders/pie/: test_conll2003.py
tests/helpers/: package_available.py
tests/shell/: test_basic_commands.py  test_debug_configs.py  test_sweeps.py
tests/unit/: test_mnist_datamodule.py
tests/unit/document/: test_types.py
tests/unit/metrics/: test_f1.py  test_statistics.py
tests/unit/pipeline/: test_ner_re_pipeline.py
tests/unit/serializer/: test_brat.py  test_json.py
tests/unit/taskmodules/: test_transformer_token_classification.py
tests/unit/utils/: test_task_utils.py
