[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "your-project"
version = "0.0.1"
description = "does cool things"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pytorch-ie (>=0.31.10,<0.32.0)",
    "pie-datasets (>=0.10.10,<0.11.0)",
    "pie-modules (>=0.12.1,<0.13.0)",
    "hydra-core (>=1.3.0)",
    "hydra-colorlog (>=1.2.0)",
    "hydra-optuna-sweeper (>=1.2.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "nbstripout (>=0.8.1,<0.9.0)",
    "pyrootutils (>=1.0.4,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "sh (>=2.2.2,<3.0.0)",
    "pudb (>=2025.1,<2026.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "plotext (>=5.3.2,<6.0.0)"
]

[project.urls]
homepage = "https://your-project.com"
repository = "https://github.com/user/project"

[tool.isort]
line_length = 99
profile = "black"
filter_files = true

[tool.flake8]
max_line_length = "99"
show_source = "True"
format = "pylint"
ignore = "\nF401\nW504\nF841\nE501\nE704"
exclude = "\n.git\n__pycache__\ndata/*\ntests/*\nnotebooks/*\nlogs/*"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
log_cli = true
markers = [
    "slow",
    "veryslow",
]
addopts = [
    "--durations=0",
    "--strict-markers",
    "--doctest-modules"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.setuptools]
include-package-data = false